bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:2: error: value or is not a member of Boolean
  return talking && (hour<=7 or hour>=20)
                             ^